# python-log-analyzer

./: LICENSE  README.md  main.py  pyproject.toml
analyzer/: cli.py  engine.py  model.py  parser.py  registry.py  rules.py  rules_builtin.py  rules_error_count.py  rules_service_error_count.py  stats.py
cli/: main.py
tests/: test_cli.py  test_engine.py  test_error_count_rule.py  test_parser.py  test_registry.py  test_rules.py  test_service_error_count_rule.py  test_stats.py
