[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-log-analyzer"
version = "0.1.0"
description = "A simple log analyzer"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools]
packages = ["analyzer", "cli"]

[project.scripts]
log-analyzer = "cli.main:main"
